B-Bone rest pose is not drawn correctly in Edit Mode #56268

Closed
opened 2018-08-07 20:04:15 +02:00 by Alexander Gavrilov · 4 comments

Blender Version

Broken: 2.79, 2.8
Worked: never

Short description of error

Blender ignores influence of parent/child or custom handle bones when drawing B-Bones in Edit Mode. However in reality they do affect the rest shape of the bone.

Fixing this issue requires moving the custom handle settings to Edit Mode as well, so this can only be done in 2.8 due to backward compatibility concerns.

Test file

test-bbone-shape.blend

Contains 3 armatures with B-Bones controlled by parent/child and explicit custom handles. The curved ones incorrectly display straight in edit mode.

The straight one happens to correctly display straght in edit mode, but the mesh distortion shows that there is a coincidental issue with the actual armature deformation.

**Blender Version** Broken: 2.79, 2.8 Worked: never **Short description of error** Blender ignores influence of parent/child or custom handle bones when drawing B-Bones in Edit Mode. However in reality they do affect the rest shape of the bone. Fixing this issue requires moving the custom handle settings to Edit Mode as well, so this can only be done in 2.8 due to backward compatibility concerns. **Test file** [test-bbone-shape.blend](https://archive.blender.org/developer/F4148992/test-bbone-shape.blend) Contains 3 armatures with B-Bones controlled by parent/child and explicit custom handles. The curved ones incorrectly display straight in edit mode. The straight one happens to correctly display straght in edit mode, but the mesh distortion shows that there is a coincidental issue with the actual armature deformation.
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov

This issue was referenced by 65f77ccea1

This issue was referenced by 65f77ccea1645f8c66fc171377641b08b62010e0
Joshua Leung was assigned by Alexander Gavrilov 2018-08-07 20:11:19 +02:00
Author
Member
This branch based on 2.8 fixes it: https://developer.blender.org/diffusion/BS/history/temp-angavrilov-bbone-custom-handles/
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56268
No description provided.